--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open",
+    "test": "jest --watch"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
@@ -16,6 +19,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "cypress": "^12.8.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "sass": "^1.59.3"
   }
 }
