--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cypress": "^12.8.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "sass": "^1.59.3"
+    "sass": "^1.59.3",
+    "typescript": "5.0.2"
   }
 }
